Update publications navigation image

--- a/2015/_data/navigation.yml
+++ b/2015/_data/navigation.yml
@@ -8,9 +8,9 @@
 - title: Pubs
   url: /publications/
   excerpt: "Academic publications I've participated in."
-  image: 225x150.jpg
+  image: toc-pubs.png
 
-- title: Projects 
+- title: Projects
   url: /projects/
   excerpt: "A portfolio of projects I've worked on."
   image: 225x150.jpg
